# sobec

./: CMakeLists.txt
include/sobec/: fwd.hpp  python.hpp
include/sobec/hand_table/: model_factory_hand.hpp  wbc_hand.hpp
include/sobec/walk-with-traj/: designer.hpp  horizon_manager.hpp  model_factory.hpp  wbc.hpp
python/: CMakeLists.txt  main.cpp
python/crocomplements/: residual-power.cpp
python/hand_table/: model_factory_hand.cpp  wbc_hand.cpp
python/sobec/: __init__.py
python/tests/: bullet_Talos.py  configurationFree.py  freeWalkMPC.py  tableMPC.py
python/walk-with-traj/: designer.cpp  horizon_manager.cpp  model_factory.cpp
python/walk-without-think/: model_factory_nothinking.cpp
src/hand_table/: model_factory_hand.cpp  wbc_hand.cpp
src/walk-with-traj/: designer.cpp  horizon_manager.cpp  model_factory.cpp  wbc.cpp
src/walk-without-think/: ocp-running-models.cpp  ocp-terminal-model.cpp
tests/: CMakeLists.txt
tests/factory/: cost.cpp  cost.hpp
